# ergodox-nrf53-fw

./: CMakeLists.txt  Kconfig  blaatind.keymap  build.yaml  prj.conf  west.yml  zmk.conf
.github/workflows/: build.yml  build_image.yml
boards/arm/blaatind/: CMakeLists.txt  Kconfig  Kconfig.board  Kconfig.defconfig  blaatind.dts  blaatind.yaml  blaatind.zmk.yml  blaatind_cpuapp-pinctrl.dtsi  blaatind_cpuapp.dts  blaatind_cpuapp.yaml  blaatind_cpuapp_defconfig  blaatind_cpunet.dts  blaatind_cpunet.yaml  blaatind_cpunet_defconfig  blaatind_defconfig  board.cmake  nrf5340_cpunet_reset.c  nrf5340_set_hv_out.c
boards/arm/blaatind_cpunet/: Kconfig.board  Kconfig.defconfig  blaatind_cpunet.dts  blaatind_cpunet.yaml  blaatind_cpunet_defconfig  board.cmake
boards/arm/nrf5340dk_nrf5340/: Kconfig.defconfig
boards/arm/tinderboard/: CMakeLists.txt  Kconfig  Kconfig.board  Kconfig.defconfig  nrf5340_cpunet_reset.c  tinderboard.dts  tinderboard.yaml  tinderboard.zmk.yml  tinderboard_cpunet.dts  tinderboard_cpunet.yaml  tinderboard_cpunet_defconfig  tinderboard_defconfig
boards/shields/blaatind/: Kconfig.defconfig  Kconfig.shield  blaatind.conf  blaatind.dtsi  blaatind.zmk.yml  blaatind_left.overlay  blaatind_right.overlay
boards/shields/blaatind/boards/: blaatind_cpuapp.overlay
config/: blaatind.conf  nrf53_ergodox.conf  prj.conf  west.yml
config_app/: west.yml
config_net/: build.yaml  west.yml
